[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Camera.gd" type="Script" id=2]
[ext_resource path="res://Player/States/Ground.gd" type="Script" id=3]
[ext_resource path="res://Utility/StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=7]
[ext_resource path="res://Player/States/Air.gd" type="Script" id=8]
[ext_resource path="res://Player/States/FrontWallRun.gd" type="Script" id=9]
[ext_resource path="res://Player/States/SideWallRun.gd" type="Script" id=10]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.3

[sub_resource type="CapsuleShape" id=2]
radius = 0.3
height = 0.28

[sub_resource type="CapsuleMesh" id=3]
radius = 0.3
mid_height = 1.3

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.2, 0.1, 0.2 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="StandShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
shape = SubResource( 1 )

[node name="CrouchShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.44, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Body" type="Spatial" parent="."]

[node name="Scaler" type="Spatial" parent="Body"]

[node name="MeshInstance" type="MeshInstance" parent="Body/Scaler"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.66476, 0 )
current = true
script = ExtResource( 2 )

[node name="RightRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
cast_to = Vector3( 0.5, 0, 0 )

[node name="LeftRay" type="RayCast" parent="Body"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.5, 0 )
cast_to = Vector3( 0.5, 0, 0 )

[node name="FrontRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, -0.4 )
cast_to = Vector3( 0, -1.9, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Ground/Idle")

[node name="Ground" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine/Ground"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Ground"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine/Air"]
script = ExtResource( 7 )

[node name="FrontWallRun" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="SideWallRun" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="StandCheck" type="Area" parent="."]
input_ray_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="StandCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78922, 0 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Jump_buffer" type="Timer" parent="."]
wait_time = 0.17
one_shot = true
